assets/sass/style.scss
$g1: #333;
$g2: #444;
$g3: #666;
$g4: #999;

$w1: #fff;
$w2: #eee;
$w3: #ccc;
$w4: #aaa;

$green: #00a849;
$green-hl: #00E560;

body {
    background: $g1;
    color: $w2;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

img {
    max-width: 100%;
}

h2 {
    font-size: 1.75rem;
    font-weight: 300;
    color: $w2;
}
h3 {
    text-transform: uppercase;
    color: $g3;
    font-weight: bold;
    font-size: 1.5rem;
}

main {
    padding: 2rem;
    flex: 1 0 auto;
    > .row {
        height: 100%;
    }
}
.big {
    font-size: 1.2em;
}
a.button {
    display: inline-block;
    background: $green;
    color: $w2;
    padding: .25em .75em;
    cursor: pointer;
    &[disabled=true], &.disabled {
        background: $g3;
        color: $w4;
    }
}
.kb-badge {
    background: $green;
    width: 2.3em;
    text-align: center;
    height: 2.3em;
    line-height: 1.4em;
    display: inline-block;
    font-size: .65em;
    padding: .5em;
    font-weight: 400;
    margin-bottom: .25em;
    box-sizing: border-box;
    border-radius: 50%;
    vertical-align: middle;
    margin-left: .5em;
}

i.material-icons {
    &.md-36 {
        font-size: 36px !important;
    }
    &.md-48 {
        font-size: 48px !important;
    }
}
nav {
    .brand-logo {
        padding: 0 2.5rem;
        font-weight: 100;
    }
}
#sidebar {
    h1 {
        font-size: 2rem;
        color: $w2;
        margin-bottom: 0;
    }
    h2 {
        font-size: 1.5rem;
        color: $w4;
    }
}
.user-card {
    background: $g3;
    display: grid;
    margin: 1rem 0;
    grid-template-columns: 7rem 1fr;
    img {
        width: 100%;
        margin: 0;
        padding: 0;
    }
    .body {
        padding: .25rem 1rem;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        h5 {
            margin-top: .25em;
            font-weight: 300;
            color: $w1;
            a {
                color: inherit;
            }
        }
        a.button {
            display: inline-block;
            background: $g4;
            color: $w2;
            padding: .25em .75em;
        }
    }
}
.page-footer {
    padding-top: 0;
    text-align: center;
}

#movies, #tv, #books {
    display: grid;
    grid-gap: 1rem;
    @media screen and (min-width: 601px) {
        grid-template-columns: repeat(3, 1fr);
    }
    @media screen and (min-width: 993px) {
        grid-template-columns: repeat(4, 1fr);
    }
    @media screen and (min-width: 1200px) {
        grid-template-columns: repeat(5, 1fr);
    }
    a {
        display: block;
        padding: 80% 0;
        background-position: center;
        background-size: cover;
    }
}
.tags {
    margin-top: .5em;
    .tag {
        font-size: .9rem;
        background: $g4;
        padding: .25em .5em;
        margin: .75em .75em 0 0;
        display: inline-block;
        &.author {
            background: $green;
        }
    }
    a {
        color: inherit;
    }
}

#profile-links, #mediaSearchResults, #musicSearchResults {
    .link, .search-result {
        display: grid;
        margin-bottom: 1em;
        grid-template-columns: 5rem 1fr 3rem;
        background: $g3;
        .img {
            padding: 50%;
            background-position: center;
            background-size: cover;
        }
        .body {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: flex-start;
            padding: .75rem 1rem;
            h5 {
                margin: 0;
                font-weight: 300;
                font-size: 1.3rem;
                a {
                    color: inherit;
                }
            }
            h6 {
                color: $w3;
                margin-bottom: -.5em;
            }
        }
    }
}
#mediaSearchResults {
    .search-result, .links {
        grid-template-columns: 4rem 1fr 3rem;
    }
    .link {
        .img {
            padding: 70% 0;
        }
    }
}
#profile-links {
    .link {
        grid-template-columns: 9rem 1fr 3rem;
        .img {
            padding: 50% 0;
        }
    }
}
#media-choices, #music-choices {
    display: flex;
    justify-content: center;
    align-items: center;
    a {
        margin: 0 1rem;
        .material-icons {
            color: $g3;
            cursor: pointer;
            font-size: 2.5rem;
        }
        &.active {
            .material-icons {
                color: $green;
            }
        }
    }
}
#mediaSearchResults, #musicSearchResults {
    padding-top: 1rem;
    .search-result {
        > a {
            text-align: center;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-content: center;
            background: $green;
            align-self: stretch;
            color: $w1;
            cursor: pointer;
        }
    }
}
#selectedMedia, #selectedMusic {
    padding-top: 2rem;
    img {
        max-height: 13rem;
        margin: auto;
        display: block;
    }
    h1 {
        font-size: 1.8rem;
        margin-bottom: 1rem;
    }
    h2 {
        color: $w3;
        font-size: 1.5rem;
        margin-top: 0;
    }
}
#newMix {
    #submit {
        a {
            display: block;
            width: 10rem;
            margin: 1rem auto;
            text-align: center;
        }
    }
}

